# ctf-training

./: .dockerignore  .gitignore  Dockerfile  Link.desktop  README.md  docker-compose.yml  package.json
binary-challenges/buffer-overflow/: Makefile  README.md
binary-challenges/buffer-overflow/src/: main.c
binary-challenges/template-binary/: Makefile
crypto-challenges/: index.js  package.json
crypto-challenges/challenges/: ceaser.pug  emails.pug  template.pug
crypto-challenges/challenges/prelude/: challenge-body.pug  challenge-head.pug
flag-input/: Dockerfile  flags.json  generate-flag.js  index.js  package.json  tips.json
flag-input/views/: downloads.pug  index.pug
flag-input/views/includes/: head.pug  header.pug  styles.css
forensics-challenges/: Makefile
forensics-challenges/forensics1/: README.md
python-challenges/: challenges.js  editor.pug  index.js  package.json
python-challenges/resources/: main.js
resources/: Dockerfile  Learning.md  README.md
template-c/: CMakeLists.txt
template-crypto/: index.pug  styles.css
web-challenges/password-reset-1/: challenge.php  index.php
web-challenges/signin-form-1/: challenge.php  index.php
web-challenges/template/: challenge.php  index.php
