CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(template
	LANGUAGES C CXX ASM
	VERSION 1.0.0
	DESCRIPTION Provides a template for making CTF challenges
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib") 
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

IF(WIN32)
	SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
ENDIF(WIN32)

SET(APP_SOURCES src/main.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${APP_SOURCES})